fix slider on mobile size

--- a/sass/parts/caseStudies/_caseStudies-slider.sass
+++ b/sass/parts/caseStudies/_caseStudies-slider.sass
@@ -102,6 +102,9 @@
                 width: 100%
                 max-width: 100px
                 margin-right: 30px
+            +max-screen($breakpoint-sm)
+                max-width: 60px
+                margin-right: 24px
             img
                 +max-screen($breakpoint-xl)
                     margin-left: auto
@@ -109,6 +112,8 @@
                     max-width: 100px
                 +max-screen($breakpoint-md)
                     margin-left: 0
+                +max-screen($breakpoint-sm)
+                    max-width: 60px
 
         &__text
             max-width: 875px
@@ -124,8 +129,9 @@
                 overflow: hidden
             +max-screen($breakpoint-md)
                 width: calc(100% - 100px - 30px)
-            +max-screen($breakpoint-md)
-                max-height: 20em
+            +max-screen($breakpoint-sm)
+                width: calc(100% - 60px - 25px)
+                max-height: 20.4em
         &__button
             width: 100%
             margin-top: 60px
